--- a/chat-app-nodejs/static/index.html
+++ b/chat-app-nodejs/static/index.html
@@ -9,6 +9,10 @@
         .icon {
             max-height: 3.5em;
         }
+        .chat_area {
+            max-height: 32em;
+            overflow-y: scroll;
+        }
         </style>
     </head>
 
@@ -21,7 +25,7 @@
                         <div class="panel-heading">
                             Chat History
                         </div>
-                        <div class="panel-body">
+                        <div class="panel-body chat_area">
                             <ul id="chat_list" class="media-list">
                                 <!-- <li class="media">
                                     <a class="pull-left" href="#">
