scroll chat area to bottom functionality added

--- a/chat-app-nodejs/static/index.html
+++ b/chat-app-nodejs/static/index.html
@@ -9,7 +9,7 @@
         .icon {
             max-height: 3.5em;
         }
-        .chat_area {
+        #chat_area {
             max-height: 32em;
             overflow-y: scroll;
         }
@@ -25,7 +25,7 @@
                         <div class="panel-heading">
                             Chat History
                         </div>
-                        <div class="panel-body chat_area">
+                        <div class="panel-body" id="chat_area">
                             <ul id="chat_list" class="media-list">
                                 <!-- <li class="media">
                                     <a class="pull-left" href="#">
